fix: no OSD indication when switching keyboard layout with Application Policy

When deciding do OSD or not, we need to consider not only last saved layout,
but last actual layout also, when comparing it to current one.

DIGEST:
BUG: 425590